<resources>
    <!-- Add Movie -->
    <string name="app_name">Movie Rater</string>
    <string name="title_text">Name</string>
    <string name="title_hint">Enter the title of movie</string>
    <string name="desc_text">Description</string>
    <string name="desc_hint">Enter a short description of the movie</string>
    <string name="lang_text">Language</string>
    <string name="lang_btn1">English</string>
    <string name="lang_btn2">Chinese</string>
    <string name="lang_btn3">Malay</string>
    <string name="lang_btn4">Tamil</string>
    <string name="date_text">Release date</string>
    <string name="date_hint">Enter release date</string>
    <string name="suit_chk1">Not suitable for all audience</string>
    <string name="suit_chk2">Violence</string>
    <string name="suit_chk3">Language used</string>
    <string name="add_btn">ADD MOVIE</string>
    <!-- View Movie -->
    <string name="view_title_text">Title:</string>
    <string name="view_desc_text">Overview:</string>
    <string name="review_text">Reviews:</string>
    <string name="review_text2">No Reviews yet.\nLong press to add your review.</string>
    <string name="view_lang_text">Language:</string>
    <string name="view_date_text">Release date:</string>
    <string name="suit_text">Suitable for children below 13:</string>
    <!-- Rate Movie -->
    <string name="view_text">Share your view on the show</string>
    <!-- Landing Page -->
    <string name="landing_page_text">You have not added a movie\nLong Press me to add a movie</string>
    <!-- Edit Movie Details Menu -->
    <string name="miSave_text">Save</string>
    <string name="miCancel_text">Cancel</string>
    <!-- Add Movie Menu -->
    <string name="miAdd_text">Add</string>
    <string name="miClear_text">Clear Entries</string>
    <!-- Rate Movie Menu -->
    <string name="miSubmit_text">Submit</string>
</resources>
